--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:scrollbars="vertical"
-                android:lineSpacingExtra="2.5dp"
+                android:fadeScrollbars="false"
+                android:textSize="16sp"
                 android:id="@+id/tvLog"/>
         </ScrollView>
 
