引入权限管理模块，增加测试文件是否存在功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,10 +38,33 @@
             android:orientation="horizontal">
 
             <Button
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="获取所有task名"
                 android:id="@+id/btnGetAllTaskName" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="inotify监控"
+                android:id="@+id/btnEnableInotifyWatch" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <EditText
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:hint="输入测试路径，以;间隔多个路径，可在/sdcard/tsPathsExist文件配置"
+                android:id="@+id/etTestPaths"
+                />
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="测试文件存在"
+                android:id="@+id/btnAccessTestPaths" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
