--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,6 +68,16 @@
                 android:text="inotify监控"
                 android:id="@+id/btnEnableInotifyWatch" />
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="thr"
+                android:id="@+id/btnAntiThread" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
